# Multi-Client-RMM

./: .gitignore  LICENSE  README.md
core-server/: CMakeLists.txt  client_test.cpp
core-server/backend/: server.cpp
dashboard/backend/api-gateway/: main.py
